--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+@import './styles/variables';
+@import './styles/buttons';
+@import './styles/shared';
+
 .App {
   text-align: center;
 }
@@ -35,4 +39,11 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.heading{
+    color: #252584 !important;
+    font-size: 2rem;
+    font-weight: bold;
+    width: 100%;
 }
